--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@electron-toolkit/utils": "^1.0.2",
     "electron-updater": "^5.3.0",
     "node-vdf": "^0.0.3",
-    "vpk": "^0.2.0",
-    "shared": "file:./shared"
+    "shared": "file:./shared",
+    "vpk": "^0.2.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
     "@sveltejs/vite-plugin-svelte": "^1.2.0",
-    "@types/node": "16.11.22",
+    "@types/node": "^16.18.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "electron": "^21.3.0",
