--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
+    "@types/node-fetch": "^2.6.2",
+    "cross-fetch": "^3.1.5",
+    "electron-fetch": "^1.9.1",
     "electron-updater": "^5.3.0",
+    "form-data": "^4.0.0",
+    "formdata-node": "^5.0.0",
+    "node-fetch": "^2.6.6",
     "node-vdf": "^0.0.3",
     "shared": "file:./shared",
     "vpk": "^0.2.0"
