--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
     "node-fetch": "^2.6.6",
     "node-vdf": "^0.0.3",
     "shared": "file:./shared",
+    "svelte-fa": "^3.0.3",
     "vpk": "^0.2.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
+    "@skeletonlabs/skeleton": "^0.80.9",
     "@sveltejs/vite-plugin-svelte": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^16.18.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "autoprefixer": "^10.4.7",
     "electron": "^21.3.0",
     "electron-builder": "^23.6.0",
     "electron-vite": "^1.0.14",
@@ -47,10 +51,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
     "svelte": "^3.53.1",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
