--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "importsNotUsedAsValues": "error",
     "preserveValueImports": true,
     "useDefineForClassFields": true,
-    "strict": false,
+    "strict": true,
     "allowJs": true,
     "checkJs": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"]
