--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
     "@types/node-fetch": "^2.6.2",
+    "classnames": "^2.3.2",
     "cross-fetch": "^3.1.5",
     "electron-fetch": "^1.9.1",
     "electron-updater": "^5.3.0",
