--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/*", "src/preload/*"],
+  "include": ["electron.vite.config.*", "src/main/*", "src/main/manifest_v4/*", "src/main/manifest_v4/manifest_maps/*" ,   "src/preload/*"],
   "compilerOptions": {
     "composite": true
   }
