rename entire app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "l4d2-launcher",
+  "name": "left4mods",
   "version": "1.0.0",
   "description": "An Electron application with Svelte and TypeScript",
   "main": "./out/main/index.js",
