--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: l4d2-launcher
+productName: left4mods
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ asarUnpack:
   - '**/*.{node,dll}'
 afterSign: build/notarize.js
 win:
-  executableName: l4d2-launcher
+  executableName: left4mods
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
