--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lucide-svelte": "^0.104.0",
+		"svelte-carousel": "^1.0.20",
+		"svelte-icons": "^2.1.0"
+	}
 }
